--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -146,7 +146,7 @@ body {
     color: gray;
     font-size: 13px;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;;
     align-items: flex-end;
     flex-wrap: wrap;
 }
