--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -142,6 +142,12 @@ body {
     top: 25px;
 }
 
+.modify {
+    position: absolute;
+    right: 50px;
+    top: 25px;
+}
+
 .note-date{
     color: gray;
     font-size: 13px;
@@ -149,5 +155,11 @@ body {
     flex-direction: column;;
     align-items: flex-end;
     flex-wrap: wrap;
+}
+
+.calendar {
+    position: absolute;
+    right: 25px;
+    bottom: 40px;
 }
 
