Delete Animation 추가 현재 오류로인해 Create Animation은 동작하지 않음
* note 구조체 내 eventFlag 2개를 추가함.(기존 데이터는 삭제하고 다시 생성해야 애니메이션이 정상적으로 동작함)

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -113,6 +113,23 @@ body {
     word-break: break-word;
     cursor: pointer;
     grid-row-end: span 1;
+
+    /* animation */
+    &.delete-ani{
+        transition: transform 0.5s ease-in-out;
+        transform: scale(1);
+        &.animation{
+            transform: scale(0);
+        }
+    }
+    &.create-ani{
+        transition: transform 0.5s ease-out;
+        transform: scale(0);
+        &.animation{
+            transform: scale(1);
+        }
+    }
+    /* animation end */
 }
 
 .note-editor-bottom {
@@ -162,4 +179,3 @@ body {
     right: 25px;
     bottom: 40px;
 }
-
