--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -87,7 +87,7 @@ body {
     border-radius: 3px;
 
     /* animation */
-    transition: transform 0.6s ease-in-out;
+    /*transition: transform 0.6s ease-in-out;
     &.open-ani {
         transform: scale(0);
         &.animation {
@@ -99,7 +99,7 @@ body {
         &.animation {
             transform: scale(0);
         }
-    }
+    }*/
     /* animation end */
 }
 
