--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -184,6 +184,22 @@ body {
     right: 50px;
     top: 25px;
 }
+.fixed{
+    color:blue;
+    width:20px;
+    height: 20px;
+    position: absolute;
+    right: 75px;
+    top: 25px;
+}
+.unfixed{
+
+    width:20px;
+    height: 20px;
+    position: absolute;
+    right: 75px;
+    top: 25px;
+}
 
 .note-date{
     color: gray;
