--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,7 @@ html {
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body {
@@ -34,6 +34,7 @@ body {
     z-index: 2;
     position: relative;
     margin-bottom: 0px;
+    padding-left: 20px;
     & p {
         font-size:25px;
         margin:25px;
@@ -216,14 +217,21 @@ body {
 .sidebar {
     position: absolute;
     z-index: 1;
-    width: 20%;
+    width: 18%;
     background-color: #175a33;
     height: 100%;
     top:0;
     left:0;
+    margin-top: 80px;
+    padding-top: 50px;
+    padding-left: 20px;
 }
 
-.sidebar a {
+.sidebar .menu {
+    margin-bottom: 30px;
+}
+
+.sidebar p {
     display: block;
     color: black;
     padding: 16px;
@@ -233,12 +241,16 @@ body {
     background-color: #4CAF50;
     color: white;
 }
+
 .dim{
     opacity: 0.7;
     background: #000;
-    width:100%;
-    height:100%;
+    margin-top: 80px;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
+    align-items: center;
+    justify-content: center;
 }
