--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -193,6 +193,7 @@ body {
 }
 
 .category-grid {
+   
     max-width: 300px;
     margin: 30px auto;
     display: flex;
@@ -250,8 +251,8 @@ body {
 }
 
 .dim{
-    opacity: 0.7;
-    background: #000;
+   
+    background: rgba($color: #000000, $alpha: 0.7);
     margin-top: 80px;
     width: 100%;
     height: 100vh;
