NoteEditor 내 Checklist에 추가하는 체크박스 추가 App.vue 내 Checklist 내 todo에 불러오면 화면에 출력되도록 추가

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -262,3 +262,16 @@ body {
     justify-content: center;
     float: right;
 }
+
+.checklist {
+    display: inline-block;
+    position: fixed;
+    right: 20%;
+    bottom: 5%;
+}
+
+.note-editor-bottom-left {
+    position: absolute;
+    bottom: 1%;
+    left: 1%;
+}
