--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -261,6 +261,10 @@ body {
     align-items: center;
     justify-content: center;
     float: right;
+
+    & h1 {
+        color: rgb(255, 255, 255);
+    }
 }
 .buttonContainer{
     margin: 30px auto;
