--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -263,7 +263,7 @@ body {
     float: right;
 
     & h1 {
-        color: rgb(255, 255, 255);
+        color: #000;
     }
 }
 .buttonContainer{
@@ -279,7 +279,35 @@ body {
     padding: 16px;
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
     border-radius: 3px;
+    cursor: pointer;
     &:hover {
         background-color: #4CAF50
     }
+}
+
+.view-button {
+    display: flex;
+    position: fixed;
+    right: 1%;
+    bottom: 1%;
+    background: #fff;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    cursor: pointer;
+    & div {
+        margin-left: 10px;
+        margin-right: 10px;
+        &:hover {
+            background-color: #4CAF50
+        }
+    }
+}
+
+.dim-layer {
+    padding: 30px;
+    background-color: #fff;
+    box-shadow: 0 2px 2px rgba(0,90,250,0.05),
+    0 4px 4px rgba(0,90,250,0.05),
+    0 8px 8px rgba(0,90,250,0.05),
+    0 16px 16px rgba(0,90,250,0.05);
 }
