--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -311,3 +311,7 @@ body {
     0 8px 8px rgba(0,90,250,0.05),
     0 16px 16px rgba(0,90,250,0.05);
 }
+
+.todo-container {
+    background-color: #fff;
+}
