--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -313,5 +313,15 @@ body {
 }
 
 .todo-container {
+    width:300px;
+    right:300px;
+    max-height:200px;
+    position: fixed;
     background-color: #fff;
+    overflow: auto;
+    border-radius: 3px;
+    box-shadow: 0 2px 2px rgba(0,90,250,0.05),
+      0 4px 4px rgba(0,90,250,0.05),
+      0 8px 8px rgba(0,90,250,0.05),
+      0 16px 16px rgba(0,90,250,0.05);
 }
