--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -312,6 +312,20 @@ body {
     0 16px 16px rgba(0,90,250,0.05);
 }
 
+.login{
+    background: rgba($color: #000000, $alpha: 0.7);
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: right;
+    z-index: 1;
+}
+
 .todo-container {
     width:300px;
     max-width: 300px;
@@ -334,4 +348,5 @@ body {
         }
         cursor: pointer;
     }
+
 }
