--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,22 +27,47 @@ body {
 
 .header {
     display: flex;
-    align-items: center;
-    // justify-content: center;
     background: #000;
     color: #fff;
-    z-index: 2;
-    position: relative;
-    margin-bottom: 0px;
-    padding-left: 20px;
-    & p {
+    align-items: center;
+    justify-content: space-between;
+
+    .left{
+        display: flex;
+        align-items: center;
+        
+       
+       
+        position: relative;
+        margin-bottom: 0px;
+        padding-left: 20px;
+        & p {
+            font-size:25px;
+            margin:25px;
+        }
+        .icon {
+            margin-left:25px;
+            height:80px;
+        }
+    }
+    .right{
+        margin-right: 13%;
+        display: flex;
+        align-items: center;
+        // justify-content: center;
+        cursor: pointer;
+        z-index: 2;
+        position: relative;
+        margin-bottom: 0px;
+        padding-left: 20px;
         font-size:25px;
-        margin:25px;
+        &:hover{
+            color:gray;
+        }
+     
+     
     }
-    & img {
-        margin-left:25px;
-        height:80px;
-    }
+   
 }
 
 .title-input {
@@ -348,5 +373,33 @@ body {
         }
         cursor: pointer;
     }
+    
+}
+.userImg{
+    width: 50px;
+    height: 50px;
+    margin-right: 15px;
+}
 
+.logoutPop{
+    border-style: solid;
+    border-color: gray;
+    border-width: 2px;
+    top:85px;
+    right:8%;
+    width:140px;
+    padding:5px;
+    color:white;
+    background-color: rgb(41, 37, 37);
+    position:fixed;
+    text-align: center;
+    font-size:25px;
+    cursor: pointer;
+    transition: background-color.3s;
+    &:hover{
+        background-color: gray;
+        border-color:black;
+        color: black;
+    }
+    
 }
