--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -99,6 +99,7 @@ body {
         padding: 10px;
         resize: none;
         border: none;
+        height:300px;
         &:hover {
             outline: 0;
         }
@@ -185,7 +186,7 @@ body {
     margin-bottom: 0.7%;
     border-radius: 3px;
     border: 1px solid rgb(203,213,224);
-    padding: 1.5%;
+    padding: 7px;
     font-size: 16.5px;
 }
 
@@ -440,6 +441,45 @@ body {
 #pagination a {display:inline-block;margin-right:10px;}
 #pagination .on {font-weight: bold; cursor: default;color:#777;}
 .position{
+    margin-top:3px;
     width: 100%;
-    height: 20px;
+    height: 35px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    div{
+        width:80%;
+        display:flex;
+       
+    }
+    #span_position{
+        margin-right: 20px;
+        width:80%;
+        border: solid;
+        border-width: 1px;
+        border-color: gray;
+    }
+    #span_category{
+        padding:3px;
+        width:105px;
+    }
+    select{
+        width:15%;
+    }
+}
+
+#mapButton{
+    cursor: pointer;
+    width:80px;
+    font-size: 18px;
+    margin-right: 15px;
+    border:solid;
+    border-width:1.5px;
+    color:rgb(39, 39, 39);
+    background-color: gray;
+    &:hover{
+      background-color:rgb(92, 91, 91);  
+      color: black;
+    }
 }
