--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -442,6 +442,7 @@ body {
 #pagination .on {font-weight: bold; cursor: default;color:#777;}
 .position{
     margin-top:3px;
+    padding:3px;
     width: 100%;
     height: 35px;
     display: flex;
@@ -454,6 +455,7 @@ body {
        
     }
     #span_position{
+        margin-left: 25px;
         margin-right: 20px;
         width:80%;
         border: solid;
@@ -477,7 +479,8 @@ body {
     border:solid;
     border-width:1.5px;
     color:rgb(39, 39, 39);
-    background-color: gray;
+    border-radius: 5%;
+    background-color: rgb(180, 180, 180);
     &:hover{
       background-color:rgb(92, 91, 91);  
       color: black;
