--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -95,6 +95,7 @@ body {
     display: flex;
     flex-direction: column;
 
+
     textarea {
         padding: 10px;
         resize: none;
@@ -147,7 +148,7 @@ body {
     margin: 0 0 1em;
     width: 100%;
     background: #fff;
-    padding: 25px;
+    padding: 18px;
     word-break: break-word;
     cursor: pointer;
     grid-row-end: span 1;
@@ -190,17 +191,9 @@ body {
     font-size: 16.5px;
 }
 
-.delete {
-    position: absolute;
-    right: 25px;
-    top: 25px;
-}
 
-.modify {
-    position: absolute;
-    right: 50px;
-    top: 25px;
-}
+
+
 
 .note-date {
     color: gray;
@@ -489,4 +482,45 @@ body {
         background-color: rgb(20, 20, 20);
         color: gray
     }
+}
+
+.noteHeader{
+    font-size: 12px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.noteHeader2{
+    width:85%;
+    display: flex;
+    flex-direction: row;
+}
+.noteInfo{
+    display: flex;
+    flex-direction: column;
+}
+.noteUserImg{
+    margin-right: 15px;
+    margin-top: 5px;
+    width: 40px;
+    height: 40px;
+}
+.noteButton{
+    float:right;
+    width:30%;
+    display: flex;
+    justify-content: space-between;
+}
+.noteTag{
+    font-size: 16px;
+}
+.note-text{
+    font-size: 17px;
+    margin-top:5px
+}
+.note-title{
+    font-size: 17px;
+    margin-top: 10px;
+    display: block;
 }
