--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -96,18 +96,7 @@ body {
     flex-direction: column;
 
 
-    textarea {
-        padding: 10px;
-        resize: none;
-        border: none;
-        height:300px;
-        &:hover {
-            outline: 0;
-        }
-        &:focus {
-            outline: 0;
-        }
-    }
+
 }
 
 .note-grid {
@@ -567,3 +556,52 @@ body {
        margin-left: 30px;
     }
 }
+.note_content{
+    display: flex;
+    textarea {
+        width:50%;
+        padding: 10px;
+        resize: none;
+        border: none;
+        height:300px;
+        &:hover {
+            outline: 0;
+        }
+        &:focus {
+            outline: 0;
+        }
+    }
+}
+.image_upload{
+    width:50%;
+  
+}
+.image_upload {
+    label{
+    display: block;
+    border-radius: 5%;
+    width:100%;
+    background-color: rgb(220, 234, 240);
+    text-align: center;
+    cursor: pointer;
+    }
+    input[type="file"]{
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip:rect(0,0,0,0);
+        border: 0;
+    }
+    img{
+        margin-top: 15px;
+        width:100%;
+        height:70%
+    }
+}
+.note_img{
+    width: 100%;
+}
+
