--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -528,12 +528,9 @@ body {
     margin-top: 5px;
     margin-right:10px;
     padding: 5px;
-    border:solid;
     border-radius: 10px;
-    border-width: 1px;
-    border-color: gray;
-    background-color: rgb(231, 242, 247);
-    transition: 0.5s ;
+    background-color: rgb(217, 239, 250);
+    transition: 0.3s ;
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
     &:hover{
 
@@ -603,5 +600,27 @@ body {
 }
 .note_img{
     width: 100%;
+}
+.editor_img{
+    span{
+        padding-left: 10px;
+        padding-right: 10px;
+        font-size: 30px;
+        display: inline-block;
+        position: absolute;
+        right: 20px;
+        top:135px;
+        cursor: pointer;
+        z-index: 1;
+        border-radius: 50%;
+
+
+        background-color: white;
+        transition: 0.3s ;
+        box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
+        &:hover{
+            transform: scale(1.2,1.2);    
+        }
+    }
 }
 
