--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -602,6 +602,10 @@ body {
     width: 100%;
 }
 .editor_img{
+    img{
+        width:100%;
+        height:100%;
+    }
     span{
         padding-left: 10px;
         padding-right: 10px;
@@ -613,8 +617,6 @@ body {
         cursor: pointer;
         z-index: 1;
         border-radius: 50%;
-
-
         background-color: white;
         transition: 0.3s ;
         box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
