--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -440,7 +440,7 @@ body {
     #span_position{
         margin-left: 25px;
         margin-right: 20px;
-        width:75%;
+        width:65%;
         border: solid;
         border-width: 1px;
         border-color: gray;
@@ -456,17 +456,21 @@ body {
 
 #mapButton{
     cursor: pointer;
+    padding-left: 5px;
+    padding-top: 3px;
     width:80px;
-    font-size: 18px;
+    font-size: 15px;
     margin-right: 15px;
-    border:solid;
     border-width:1.5px;
     color:rgb(39, 39, 39);
     border-radius: 5%;
+    overflow: hidden;
     background-color: rgb(180, 180, 180);
+    text-align: center;
+    transition: 0.3s ;
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
     &:hover{
-      background-color:rgb(92, 91, 91);  
-      color: black;
+        transform: scale(1.2,1.2);    
     }
     &:active{
         background-color: rgb(20, 20, 20);
@@ -554,6 +558,7 @@ body {
     }
 }
 .note_content{
+    margin-top: 10px;
     display: flex;
     textarea {
         width:50%;
@@ -575,10 +580,17 @@ body {
 }
 .image_upload {
     label{
+    
     display: block;
     border-radius: 5%;
-    width:100%;
-    background-color: rgb(220, 234, 240);
+    width:30%;
+    background-color: rgb(217, 239, 250);
+    transition: 0.3s ;
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
+    &:hover{
+
+        transform: scale(1.2,1.2);    
+    }
     text-align: center;
     cursor: pointer;
     }
@@ -626,3 +638,18 @@ body {
     }
 }
 
+.image_button{
+    display: flex;
+    justify-content: space-between;
+    div{
+        cursor: pointer;
+        text-align: center;
+        width: 30%;
+        background-color: rgb(217, 239, 250);
+        transition: 0.3s ;
+        box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
+        &:hover{
+            transform: scale(1.2,1.2);    
+        }
+    }
+}
