--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -654,15 +654,39 @@ body {
 }
 
 .editor-grid {
+    z-index: 1;
+    text-align: center;
     position: absolute;
     left: 150px;
     right: 150px;
     top: 80px;
-    background: #fff;
+    background: rgb(252, 244, 244);
     padding: 16px;
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
     border-radius: 3px;
     img{
-        max-width: 100%;
+        max-height: 400px;
+    }
+    button{
+        margin: 10px;
+    }
+
+  
+}
+
+.thumbnail{
+    margin: 15px;
+    display: flex;
+    justify-content: space-evenly;
+    img{
+        border-radius: 15px;
+        cursor: pointer;
+        width:150px;
+        height: 150px;
+        transition: 0.3s ;
+        box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
+        &:hover{
+            transform: scale(1.2,1.2);    
+        }
     }
 }
