--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -575,8 +575,11 @@ body {
     }
 }
 .image_upload{
-    width:50%;
-
+    width:20%;
+    display: inline-block;
+    position: absolute;
+    right: 20px;
+    top:135px;
 }
 .image_upload {
     label{
@@ -614,17 +617,17 @@ body {
 }
 .editor_img{
     img{
-        width:100%;
-        height:100%;
+        width:230px;
+        height:230px;
     }
     span{
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 5px;
+        padding-right: 5px;
         font-size: 30px;
         display: inline-block;
         position: absolute;
-        right: 20px;
-        top:135px;
+        right: 80px;
+        top:30px;
         cursor: pointer;
         z-index: 1;
         border-radius: 50%;
